# cos514-project-public

./: keystoneSrc.nix  rpclib.nix
gpu-worker-client/: CMakeLists.txt  client.cpp  client.nix
gpu-worker-eapp/: CMakeLists.txt  app.lds  eapp.c
gpu-worker-host/: CMakeLists.txt  default.nix  host_native.cpp  shared_buffer.cpp  shared_buffer.h
keystone-nix/: 0001-Add-keystone-rom-support.patch  0001-nixos-netboot-avoid-adding-grub2-syslinux-to-non-aar.patch  config.nix  default.nix  nixpkgsSrc.nix  qemu-boot-snapshot.py
